@@ -8,6 +8,12 @@ Version 1.9.3
        be created. (Stefan)
 - BUG: TortoiseMerge: The horizontal scroll bar was wrong
        if the shown doc had a lot of tabs. (Stefan)
+- BUG: Adjusting externals to the HEAD revision used
+       always the same revision if multiple externals were
+       selected. (Stefan)
+- BUG: Adjusting externals used the wrong revision
+       if the external was copied itself but not
+       modified later. (Stefan)
 
 Version 1.9.2
 - BUG: Performance issue if dragging lots of files
